--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,4 +1,4 @@
 lib_LTLIBRARIES = libseed.la
 libseed_la_SOURCES = defs.h buf.c buf.h time.c time.h list.c list.h 
 seedincdir = $(includedir)/seed
-seeddir_HEADERS =  defs.h buf.h time.h list.h
+seedinc_HEADERS =  defs.h buf.h time.h list.h
