--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,5 @@
 seedincdir = $(includedir)/seed
 
 lib_LTLIBRARIES = libseed.la
-libseed_la_SOURCES = defs.h buf.c buf.h time.c time.h list.c list.h tcp.c tcp.h concurrent/bq.c concurrent/api.h
-
-seedinc_HEADERS =  defs.h buf.h time.h list.h tcp.h concurrent.h
+libseed_la_SOURCES = defs.h buf.c buf.h time.c time.h list.c list.h tcp.c tcp.h net.c net.h concurrent/bq.c concurrent/api.h
+seedinc_HEADERS =  defs.h buf.h time.h list.h tcp.h concurrent.h net.h
