--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,4 +2,4 @@ seedincdir = $(includedir)/seed
 
 lib_LTLIBRARIES = libseed.la
 libseed_la_SOURCES = defs.h buf.c buf.h time.c fmpool.c fmpool.h time.h list.c list.h tcp.c tcp.h net.c net.h concurrent/bq.c concurrent/api.h
-seedinc_HEADERS =  defs.h buf.h time.h list.h tcp.h concurrent.h net.h
+seedinc_HEADERS =  defs.h buf.h time.h fmpool.h list.h tcp.h concurrent.h net.h
