refactor concurrent, release 0.0.7

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 seedincdir = $(includedir)/seed
 
 lib_LTLIBRARIES = libseed.la
-libseed_la_SOURCES = defs.h buf.c buf.h time.c fmpool.c fmpool.h time.h list.c list.h tcp.c tcp.h net.c net.h concurrent/bq.c concurrent/api.h
+libseed_la_SOURCES = defs.h buf.c buf.h time.c fmpool.c fmpool.h time.h list.c list.h tcp.c tcp.h net.c net.h concurrent.c concurrent.h
 seedinc_HEADERS =  defs.h buf.h time.h fmpool.h list.h tcp.h concurrent.h net.h
