--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,13 @@
 seedincdir = $(includedir)/seed
 
 lib_LTLIBRARIES = libseed.la
-libseed_la_SOURCES = defs.h buf.c buf.h time.c fmpool.c fmpool.h time.h list.c list.h tcp.c tcp.h net.c net.h concurrent.c concurrent.h
-seedinc_HEADERS =  defs.h buf.h time.h fmpool.h list.h tcp.h concurrent.h net.h
+libseed_la_SOURCES = attribute.h attribute.c \
+		     buf.c buf.h \
+		     concurrent.c concurrent.h \
+		     fmpool.c fmpool.h \
+		     list.c list.h \
+		     net.c net.h \
+		     tcp.c tcp.h \
+		     threadlocal.c threadlocal.h
+		     time.c time.h \
+seedinc_HEADERS =  attribute.h buf.h concurrent.h fmpool.h list.h net.h tcp.h threadlocal.h time.h
