--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -123,8 +123,9 @@ am__uninstall_files_from_dir = { \
 am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(seedincdir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libseed_la_LIBADD =
-am_libseed_la_OBJECTS = attribute.lo buf.lo concurrent.lo fmpool.lo \
-	list.lo net.lo tcp.lo threadlocal.lo time.lo
+am_libseed_la_OBJECTS = attribute.lo aggregator.lo buf.lo \
+	concurrent.lo fmpool.lo list.lo net.lo tcp.lo threadlocal.lo \
+	time.lo
 libseed_la_OBJECTS = $(am_libseed_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -308,7 +309,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 seedincdir = $(includedir)/seed
 lib_LTLIBRARIES = libseed.la
-libseed_la_SOURCES = attribute.h attribute.c \
+libseed_la_SOURCES = attribute.c attribute.h \
+		     aggregator.c aggregator.h \
 		     buf.c buf.h \
 		     concurrent.c concurrent.h \
 		     fmpool.c fmpool.h \
@@ -398,6 +400,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/aggregator.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/attribute.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/buf.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/concurrent.Plo@am__quote@
