modify Makefile.am, adding some cflags

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,7 +1,7 @@
 seedincdir = $(includedir)/seed
 
 lib_LTLIBRARIES = libseed.la
-libseed_la_SOURCES = attribute.c attribute.h \
+libseed_la_SOURCES = attribute.h \
 		     aggregator.c aggregator.h \
 		     buf.c buf.h \
 		     concurrent.c concurrent.h \
@@ -9,6 +9,7 @@ libseed_la_SOURCES = attribute.c attribute.h \
 		     list.c list.h \
 		     net.c net.h \
 		     tcp.c tcp.h \
-		     threadlocal.c threadlocal.h \
+		     threadlocal.h \
 		     time.c time.h 
-seedinc_HEADERS =  attribute.h buf.h concurrent.h fmpool.h list.h net.h tcp.h threadlocal.h time.h
+libseed_CLAGS = -std=c99 -Wall -pedantic -pthread
+seedinc_HEADERS = attribute.h buf.h concurrent.h fmpool.h list.h net.h tcp.h threadlocal.h time.h
