add macros.h to Makefile.am

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,9 +7,10 @@ libseed_la_SOURCES = attribute.h \
 		     concurrent.c concurrent.h \
 		     fmpool.c fmpool.h \
 		     list.c list.h \
+		     macros.h \
 		     net.c net.h \
 		     tcp.c tcp.h \
 		     threadlocal.h \
 		     time.c time.h 
 libseed_CLAGS = -std=c99 -Wall -pedantic -pthread
-seedinc_HEADERS = attribute.h buf.h concurrent.h fmpool.h list.h net.h tcp.h threadlocal.h time.h
+seedinc_HEADERS = attribute.h buf.h concurrent.h fmpool.h list.h macros.h net.h tcp.h threadlocal.h time.h
